# Quicksilver

./: .air.toml  .gitignore  .golangci.yml  CHECKLIST.md  CLAUDE.md  Dockerfile  GETTING_STARTED.md  Makefile  PROJECT_STATUS.md  QUALITY_REPORT.md  README.md  apitest.http  apitest_kline.http  docker-compose.yml  go.mod  go.sum
.claude/: settings.local.json
.claude/commands/: feature-try.md  gotest.md  recheck.md  rethink.md
.github/: copilot-instructions.md
.github/prompts/: planner.prompt.md  review.prompt.md  update.prompt.md
.github/workflows/: quality-check.yml
cmd/server/: main.go
config/: config.example.yaml
dashboard/: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  minimal_nav.py  pyproject.toml  start.sh
dashboard/api/: __init__.py  client.py
dashboard/pages/: balances.py  home.py  orders.py  trades.py  users.py
db/: init.sql  seed_test_user.sql
docs/: ccxt-testing-guide.md  database.md  kline-api.md  kline-feature-summary.md  project-structure.md  system-design-mvp.md
internal/api/: admin.go  admin_test.go  handlers.go  handlers_test.go
internal/ccxt/: transformer.go  transformer_test.go
internal/config/: config.go  config_test.go
internal/database/: database.go
internal/engine/: matching.go  matching_test.go
internal/middleware/: admin.go  admin_test.go  (+2 more)
scripts/: check_coverage.sh  init_test_user.sh  setup_dashboard_env.sh  setup_test_db.sh  test_ccxt_client.py  test_hyperliquid.sh
tasks/: streamlit-dashboard-plan.md  streamlit-quick-start.md  summary.md  week-45-development-plan.md  week-45-plan.md
(+16 files in other folders)
